--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,8 +6,13 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway+Dots);
 /*font-family: 'Raleway Dots', cursive;*/
 
+@font-face{
+  font-family:'Perfograma';
+  src: url("../fonts/perfograma/Perfograma.otf");
+}
+
 html, body {
-  height: 100%;
+  /*height: 100%;*/
 }
 
 body {
@@ -17,12 +22,18 @@ body {
 }
 
 section {
-  height: 100%;
+  /*height: 100%;*/
+}
+
+#home {
+  /*height: 100vh;*/
 }
 
 .content-container{
+  margin-top: 70px;
   width: 80%;
-  margin: 100px auto;
+  margin: auto;
+  margin-top: 170px;
 }
 
 header {
@@ -33,21 +44,21 @@ header {
   left: 0;
   z-index: 1000;
   position: fixed;
-  height: 70px;
   background-color: #fff;
+  border-top: 3px solid #32415b;
 }
 
 nav {
-  text-align: right;
+  text-align: center;
   color: #888;
   font-weight: 300;
-  margin-right: 10px;
+  height: 100%;
 }
 
 nav ul {
     list-style-type: none;
-    margin-top: 0;
-    padding-top: 35px;
+    padding: 35px;
+    margin: 0;
 }
 
 .nav-li {
@@ -62,6 +73,10 @@ nav ul {
   margin-left: 5px;
 }
 
+.nav-li:hover, .nav-link:hover {
+  color: #32415b
+}
+
 .name{
   font-family: 'Raleway Dots', cursive;
   font-size: 12em;
@@ -69,19 +84,31 @@ nav ul {
   text-align: center;
   color: #888;
   text-transform: uppercase;
+  /*font-family:'Perfograma'*/
 }
 
 h2{
   text-align: center;
-  text-transform: lowercase;
-  font-weight: 200;
+  text-transform: uppercase;
+  font-weight: 400;
   font-size: 50px;
+  font-family: 'Raleway Dots', cursive;
+
 }
 
 h3 {
   text-transform: uppercase;
   font-weight: 200;
   font-size: 25px;
+}
+
+.hide {
+  display: none;
+}
+
+.project{
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .project-link{
@@ -92,6 +119,8 @@ h3 {
   display: inline-block;
   width: 100px;
   text-align: center;
+  border-radius: 3px;
+  margin: 5px;
   /*height: 50px;*/
 
 }
