--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,54 +1,34 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900);
-/*font-family: 'Raleway', sans-serif;*/
-/*Michroma*/
-@import url(http://fonts.googleapis.com/css?family=Raleway+Dots);
-/*font-family: 'Raleway Dots', cursive;*/
-@font-face{
-  font-family:'Perfograma';
-  src: url("../fonts/perfograma/Perfograma.otf");
-}
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
 
 html, body {
-  /*height: 100%;*/
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Lato', sans-serif;
   margin: 0;
-  color: #888;
-}
-
-section {
-  /*height: 100%;*/
-}
-
-#home {
-  /*height: 100vh;*/
+  color: #212121;
 }
 
 .content-container{
-  margin-top: 70px;
   width: 80%;
   margin: auto;
   margin-top: 170px;
+  margin-bottom: 100px;
 }
 
 header {
   font-size: 20px;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
   top: 0;
   right: 0;
   left: 0;
   z-index: 1000;
   position: fixed;
-  background-color: #fff;
-  border-top: 3px solid #32415b;
-  border-bottom: 3px solid #FFE11A;
+  background-color: #FFE11A;
 }
 
 nav {
-  text-align: center;
-  color: #888;
+  text-align: right;
+  color: #fff;
   font-weight: 300;
   height: 100%;
 }
@@ -59,6 +39,19 @@ nav ul {
     margin: 0;
 }
 
+a {
+  color: #fe6962;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #FFE11A;
+}
+
+nav a:hover {
+  color: #fff;
+}
+
 .nav-li {
     display: inline-block;
     margin-left: 15px;
@@ -67,29 +60,22 @@ nav ul {
 
 .nav-link{
   text-decoration: none;
-  color: #888;
+  color: #fff;
   margin-left: 5px;
-}
-
-
-.nav-li:hover .nav-link {
-  color: #32415b;
-  /*all .15s ease-in-out;*/
-}
-
-.nav-li:hover .nav-icon {
-  color: #32415b;
-  /*all .15s ease-in-out;*/
+  font-weight: 600;
 }
 
 .name {
-  font-family: 'Raleway Dots', cursive;
-  font-size: 12em;
-  font-weight: 100;
+  font-size: 7em;
   text-align: center;
-  color: #888;
-  text-transform: uppercase;
-  /*font-family:'Perfograma'*/
+  color: #fff;
+  font-family:'Perfograma';
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+}
+
+.highlight {
+  font-weight: 800;
 }
 
 h2{
@@ -97,14 +83,13 @@ h2{
   text-transform: uppercase;
   font-weight: 400;
   font-size: 50px;
-  font-family: 'Raleway Dots', cursive;
-
+  font-family: 'Lato', sans-serif;
 }
 
 h3 {
   text-transform: uppercase;
-  font-weight: 200;
-  font-size: 25px;
+  font-weight: 400;
+  font-size: 30px;
 }
 
 .hide {
@@ -117,23 +102,28 @@ h3 {
 }
 
 .project-link{
-  padding: 5px;
-  border: 1px solid #888;
+  padding: 2em 1em 0 0;
   text-decoration: none;
-  color: #888;
   display: inline-block;
-  width: 100px;
-  text-align: center;
-  border-radius: 3px;
-  margin: 5px;
-  /*height: 50px;*/
+  width: auto;
+  text-transform: uppercase;
+  text-decoration: none;
+}
 
+.project-link:hover{
+   color: #FFE11A;
 }
 
 .project-image{
   width: 100%;
-/*  filter: grayscale(100%);
-  -webkit-filter: grayscale(100%);*/
+  padding: 30px 0;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+}
+
+.project-image:hover {
+  filter: none;
+  -webkit-filter: none;
 }
 
 #social-icons {
@@ -141,14 +131,14 @@ h3 {
 }
 
 #social-icons a {
-  color: #32415b;
+  color: #fe6962;
   font-size: 50px;
   text-decoration: none;
   padding: 5px;
 }
 
 #social-icons a:hover{
-  color:#FFE11A;
+  color: #FFE11A;
 }
 
 .left {
@@ -190,34 +180,10 @@ line.link {
   stroke-width: 1.5px;
 }
 
+/*end code flowers*/
+
 .technologies {
-  font-size: 0.5em;
-}
-
-.name-container {
-  width: 100%;
-  /*position: relative;*/
-}
-
-.row-div {
-  width: 100%;
-  border: 1px solid yellow;
-  /*position: relative;*/
-}
-
-.dot-div {
-  display: inline-block;
-  width: 5px;
-  height: 5px;
-  /*border: 1px solid lightgrey;*/
-  border-radius: 50%;
-  background-color: grey;
-  margin: 1px;
-  /*position: absolute;*/
-}
-
-.dot-div:hover {
-  background-color: #FFE11A;
+  font-size: 1em;
 }
 
 #about {
@@ -228,17 +194,23 @@ line.link {
   font-size: 1.5em;
 }
 
-.resume-download-link, .project-link{
+.resume-download-link{
   display: inline-block;
   border: 3px solid #FFE11A;
   padding: 2em;
   text-transform: uppercase;
   text-decoration: none;
-  color: #32415b;
   text-align: center;
-  /*width: ;*/
 }
 
+#just-for-fun {
+  text-align: center;
+}
+
+.code-flower {
+  width: 100%;
+  display: inline-block;
+}
 
 /*tablet*/
 @media screen and (max-width: 1023px){
