--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
 
 body {
   font-family: 'Lato', sans-serif;
@@ -34,9 +34,9 @@ nav {
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 35px;
-    margin: 0;
+  list-style-type: none;
+  padding: 35px;
+  margin: 0;
 }
 
 a {
@@ -53,9 +53,9 @@ nav a:hover {
 }
 
 .nav-li {
-    display: inline-block;
-    margin-left: 15px;
-    margin-right: 15px;
+  display: inline-block;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .nav-link{
@@ -66,7 +66,7 @@ nav a:hover {
 }
 
 .name {
-  font-size: 5em;
+  font-size: 4.5em;
   text-align: center;
   color: #fff;
   font-family:'Perfograma';
