--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -129,14 +129,14 @@ h3 {
 }
 
 #social-icons a {
-  color: #fe6962;
+  color: #fff;
   font-size: 50px;
   text-decoration: none;
   padding: 5px;
 }
 
 #social-icons a:hover{
-  color: #FFD10F;
+  color: #fe6962;
 }
 
 .left {
