--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -164,11 +164,12 @@ h3 {
 }
 
 .resume-section {
-  /*display: inline-block;*/
   border-top: 6px solid #000;
   padding-top: 1%;
   padding-bottom: 2%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .resume-section h2 {
@@ -179,18 +180,23 @@ h3 {
   padding-bottom: 2%;
 }
 
-
 .resume-section h3 {
   font-weight: bold;
+  margin: 0;
+  padding-bottom: 2%;
 }
-
 
 .resume-section .resume-title {
   text-transform: uppercase;
 }
 
 .resume-item {
-  border-top: 3px dashed lightgrey;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.resume-item:not(:last-child) {
+  border-bottom: 3px dashed lightgrey;
   padding-top: 5%;
   padding-bottom: 5%;
 }
@@ -201,9 +207,8 @@ h3 {
   margin-bottom: 1%;
 }
 
-.resume-date {
-
-
+.resume-date, .resume-achievement {
+  font-weight: bold;
 }
 
 .resume-info {
@@ -328,6 +333,12 @@ line.link {
     max-height: 160px;
   }
 
+  .resume-col-1, .resume-col-2 {
+    width: 100%;
+    display: block;
+    margin-right: 0;
+  }
 }
+
 
 
