--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -126,6 +126,18 @@ h3 {
 .project-image {
   width: 100%;
   padding: 30px 0;
+  /*width: 30%;*/
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.iphone {
+  padding: 30px 0;
+  width: 30%;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 
 #social-icons {
