--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -106,6 +106,10 @@ h3 {
   margin-bottom: 10%;
 }
 
+.about-content {
+  text-align: left;
+}
+
 .about-content, #social-icons {
   margin-top: 5%;
 }
@@ -126,7 +130,6 @@ h3 {
 .project-image {
   width: 100%;
   padding: 30px 0;
-  /*width: 30%;*/
   display: block;
   margin: 0 auto;
   text-align: center;
@@ -228,12 +231,12 @@ h3 {
 
 .resume-info .fa {
   font-size: 1.4em;
-  color: #212121;
+  color: #fe6962;
   padding: 0 2% 0 0;
 }
 
 .resume-info a:hover {
-  color: #fe6962;
+  color: #FFD10F;
 }
 
 .resume-download {
