--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -101,7 +101,7 @@ h3 {
   border-bottom: 2px solid lightgrey;
 }
 
-.project, .code-flower-container {
+.project {
   margin-top: 10%;
   margin-bottom: 10%;
 }
@@ -244,37 +244,6 @@ h3 {
   text-align: center;
 }
 
-/*code flowers*/
-
-circle.node {
-  cursor: pointer;
-  stroke: #000;
-  stroke-width: .5px;
-}
-
-circle.node.directory {
-  stroke: #9ecae1;
-  stroke-width: 2px;
-}
-
-circle.node.collapsed {
-  stroke: #555;
-}
-
-.nodetext {
-  fill: #252929;
-  font-weight: bold;
-  text-shadow: 0 0 0.2em white;
-}
-
-line.link {
-  fill: none;
-  stroke: #9ecae1;
-  stroke-width: 1.5px;
-}
-
-/*end code flowers*/
-
 .technologies {
   font-size: 1em;
 }
@@ -287,15 +256,6 @@ line.link {
   text-align: center;
   padding: 1em;
   margin: 1em;
-}
-
-#just-for-fun {
-  text-align: center;
-}
-
-.code-flower {
-  width: 100%;
-  display: inline-block;
 }
 
 .profile {
